使用gradle application plugin 实现Java module