@@ -1,208 +1,48 @@
-import java.nio.file.Files
-import java.nio.file.Path
+subprojects {
+    apply plugin: 'java'
 
-plugins {
-    id 'java'
-    id 'idea'
-    id 'application'
-}
-
-group 'pickjob'
-version '0.0.1'
-mainClassName = ''
-ext.moduleMainClassName = 'pickjob.java.starter/app.Application'
-ext.os = org.gradle.internal.os.OperatingSystem.current().isWindows() ? 'win':'linux'
-
-dependencies {
-    // logging
-    implementation 'org.apache.logging.log4j:log4j-api:2.11.1'
-    implementation 'org.apache.logging.log4j:log4j-core:2.11.1'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.1'
-    // charset
-    implementation 'net.freeutils:jcharset:2.0'
-    // apache commons
-    implementation 'org.apache.commons:commons-lang3:3.8'
-    // jackson
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.8'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.8'
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.8'
-    // guava
-    implementation 'com.google.guava:guava:28.0-jre'
-    // netty
-    implementation 'io.netty:netty-all:4.1.31.Final'
-    // JWT
-    implementation 'com.auth0:java-jwt:3.8.1'
-    // quartz
-    implementation ('org.quartz-scheduler:quartz:2.3.1') {
-        exclude group: 'com.zaxxer'
+    plugins.withType(JavaPlugin).configureEach {
+        java {
+            modularity.inferModulePath = true
+        }
     }
 
-    // dubbo
-    implementation 'org.apache.dubbo:dubbo:2.7.1'
-    // mysql driver
-    implementation 'mysql:mysql-connector-java:8.0.15'
-    // hikariCP
-    implementation 'com.zaxxer:HikariCP:3.3.1'
-    // mybatis
-    implementation 'org.mybatis:mybatis:3.5.1'
-    // lettuce
-    implementation ('io.lettuce:lettuce-core:5.1.7.RELEASE') {
-        exclude group: 'io.netty'
-    }
-    // zookeeper
-    implementation ('org.apache.zookeeper:zookeeper:3.4.13') {
-        exclude group: 'io.netty'
-        exclude group: 'org.slf4j'
-        exclude group: 'log4j'
-    }
-    // curator
-    implementation 'org.apache.curator:curator-recipes:4.2.0'
-    implementation 'org.apache.curator:curator-x-discovery:4.2.0'
-    // rocketmq
-    implementation ('org.apache.rocketmq:rocketmq-client:4.3.0') {
-        exclude group: 'io.netty'
-    }
-    // activemq
-    implementation ('org.apache.activemq:activemq-client:5.15.8') {
-        exclude group: 'org.apache.geronimo.specs'
+    group = 'pickjob'
+    version = '0.0.1'
+    ext.os = org.gradle.internal.os.OperatingSystem.current().isWindows() ? 'win':'linux'
+
+    dependencies {
+        // logging
+        implementation 'org.apache.logging.log4j:log4j-api:2.13.3'
+        implementation 'org.apache.logging.log4j:log4j-core:2.13.3'
+        implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.13.3'
+        // apache commons
+        implementation 'org.apache.commons:commons-lang3:3.8'
+
     }
 
-    // lombok
-    compileOnly 'org.projectlombok:lombok:1.18.8'
-    annotationProcessor 'org.projectlombok:lombok:1.18.8'
-    // class bytecode
-    implementation 'org.aspectj:aspectjweaver:1.9.3'
-    implementation 'org.javassist:javassist:3.25.0-GA'
-    implementation 'cglib:cglib:3.2.11'
-
-    // javafx
-    implementation "org.openjfx:javafx-base:14:${os}"
-    implementation "org.openjfx:javafx-graphics:14:${os}"
-    implementation "org.openjfx:javafx-controls:14:${os}"
-    implementation "org.openjfx:javafx-fxml:14:${os}"
-    implementation "org.openjfx:javafx-media:14:${os}"
-    implementation "org.openjfx:javafx-swing:14:${os}"
-    implementation "org.openjfx:javafx-web:14:${os}"
-
-    // hibernate validation
-    implementation 'org.hibernate:hibernate-validator:6.0.16.Final'
-
-    // javaee
-    implementation 'javax.servlet:javax.servlet-api:4.0.1'
-    implementation 'org.glassfish:javax.el:3.0.1-b09'
-    implementation 'javax.transaction:javax.transaction-api:1.3'
-    implementation 'javax.validation:validation-api:2.0.1.Final'
-    implementation 'javax.jms:javax.jms-api:2.0.1'
-    implementation 'javax.resource:javax.resource-api:1.7.1'
-    implementation 'javax.management.j2ee:javax.management.j2ee-api:1.1.2'
-
-    // springframework
-    implementation 'org.springframework:spring-context:5.2.4.RELEASE'
-    implementation 'org.springframework:spring-context-support:5.2.4.RELEASE'
-    implementation 'org.springframework:spring-jdbc:5.2.4.RELEASE'
-    implementation 'org.springframework:spring-tx:5.2.4.RELEASE'
-    implementation 'org.springframework:spring-webmvc:5.2.4.RELEASE'
-
-}
-
-repositories {
-    maven {
-        url "https://maven.aliyun.com/repository/central"
+    compileJava {
+        sourceCompatibility = 14
+        targetCompatibility = 14
+        options.encoding = 'UTF-8'
     }
-}
-/*
- *  Plugin: java配置
- */
-compileJava {
-    sourceCompatibility = 13
-    targetCompatibility = 13
-    options.encoding = 'UTF-8'
-    options.compilerArgs = [
-            '--module-path', classpath.asPath
-    ]
-}
-processResources {
-    outputs.upToDateWhen { false }
-    from ('src/main/resources') {
-        into '../../classes/java/main'
-    }
-    doLast {
-        Files.walk(Path.of(destinationDir.toURI()))
-                .sorted({ p1, p2 ->
-                    return p2.compareTo(p1)
-                })
-                .map({ p ->
-                    return p.toFile()
-                })
-                .forEach({ p ->
-                    p.delete()
-                })
-    }
-}
-jar {
-    manifest {
-        attributes 'Main-Class': ""
-        attributes 'Class-Path': configurations.runtimeClasspath.files.collect { it.name }.join(' ')
-    }
-}
-/*
- * Plugin: Appliction
- */
-run {
-    jvmArgs = [
-            '--module-path', classpath.asPath,
-            '--add-opens', 'java.base/java.math=dubbo',
-            '--add-opens', 'java.base/java.lang=dubbo',
-            '--module', "$moduleMainClassName"
-    ]
-    systemProperties.put("file.encoding", "UTF-8")
-}
-startScripts {
-    defaultJvmOpts = [
-            '-Dfile.encoding=UTF-8',
-            '--add-opens', 'java.base/java.math=dubbo',
-            '--add-opens', 'java.base/java.lang=dubbo'
-    ]
-    doLast{
-        def bashFile = new File(outputDir, applicationName)
-        String bashContent = bashFile.text
-        bashFile.text = bashContent.lines().collect(
-                {new StringBuilder()},
-                {sb, line ->
-                    if (!line.startsWith("CLASSPATH=")) {
-                        line = line.replaceAll('-classpath "\\\\"\\$CLASSPATH\\\\""', '--module-path \\$APP_HOME/lib' + " --module $moduleMainClassName")
-                        sb.append(line)
-                        sb.append("\n")
-                    }
-                },
-                {sb1, sb2 ->
-                    sb1.append(sb2)
-                }).toString()
 
-        def batFile = new File(outputDir, applicationName + '.bat')
-        String batContent = batFile.text
-        batFile.text = batContent.lines().collect(
-                {new StringBuilder()},
-                {sb, line ->
-                    if (!line.startsWith("set CLASSPATH=")) {
-                        line = line.replaceAll('-classpath "%CLASSPATH%"', '--module-path %APP_HOME%/lib' + " --module $moduleMainClassName")
-                        sb.append(line)
-                        sb.append("\r\n")
-                    }
-                },
-                {sb1, sb2 ->
-                    sb1.append(sb2)
-                }).toString()
-    }
-}
-/*
- *  Plugin: idea 配置
- *      gradle cleanIdea idea
- */
-idea {
-    module {
-        downloadJavadoc = true
-        downloadSources = true
+    repositories {
+        mavenLocal()
+        maven {
+            url "https://maven.aliyun.com/repository/central"
+        }
+        maven {
+            url 'https://repo.spring.io/libs-release'
+        }
+        maven {
+            url 'https://repository.apache.org/content/repositories/releases'
+        }
+        maven {
+            url 'https://jcenter.bintray.com'
+        }
+        maven {
+            url 'https://repo1.maven.org/maven2'
+        }
     }
 }
